--- a/Front/package.json
+++ b/Front/package.json
@@ -10,10 +10,12 @@
     "apexcharts": "^3.37.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.5",
+    "date-fns": "^2.29.3",
     "eslint-config-react-app": "^7.0.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
