--- a/Front/jsconfig.paths.json
+++ b/Front/jsconfig.paths.json
@@ -9,7 +9,8 @@
       "@asset/*": ["src/asset/*"],
       "@css/*": ["src/css/*"],
       "@data/*": ["src/data/*"],
-      "@layout/*": ["src/layout/*"]
+      "@layout/*": ["src/layout/*"],
+      "@store": ["src/store/*"]
     }
   }
 }
