--- a/Front/package.json
+++ b/Front/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@heroicons/react": "^2.0.16",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.0",
@@ -17,9 +18,13 @@
     "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
