--- a/Front/package.json
+++ b/Front/package.json
@@ -22,6 +22,7 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
